--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,3 +34,25 @@ header nav ul li a{
     width:25%;
    
 }
+.portfolio img{
+    width:40px;
+    height:auto;
+    display:inline;
+}.center{
+    width:30em;
+     height:15em;
+     margin-left:auto;
+     margin-right:auto;
+     width:50%;
+
+}.portfolio{
+    display:inline-flex;
+    align-items: center;
+    justify-content:center;
+    clear:both;
+    width:auto;
+    border:2px black solid;
+    background-color: black;
+}.vertical{
+    vertical-align:top;
+}
