--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,14 +12,16 @@ header nav ul li a{
     margin:50px;
     
 }header img{
-    width:20%;
+    width:15%;
     float:right;
     clear:both;
     
+    margin:0 auto;
+
 }header p{
     text-align:center;
     float:right;
-   width:20%;
+   width:15%;
     padding:0 5px 0 5px;
    font-family:monospace;
  
@@ -38,6 +40,8 @@ header nav ul li a{
     width:40px;
     height:auto;
     display:inline;
+
+
 }.center{
     width:30em;
      height:15em;
@@ -55,4 +59,18 @@ header nav ul li a{
     background-color: black;
 }.vertical{
     vertical-align:top;
+}
+.borderBottomWidth{
+/*width:10%;*/
+margin:0 auto;
+
+}nav{
+ 
+}
+.imgRight{
+    float:left;
+}
+.portfolioPics{
+    position:relative;
+    bottom:100px;
 }
